@@ -6,13 +6,13 @@ DIST xmds-1.6.5.tar.gz 528593 RMD160 7a42d9a58c73fea51f6415111ad7545810b5dfaa SH
 DIST xmds_doc20080110.pdf 10361635 RMD160 7564d28b52fb55b506f87c383ec8235db4934003 SHA1 1b6e39e33f1acf82b906c539f74c28c424d40a39 SHA256 694fb66ccdcbbad91070a5853a4767ce67a99c28fc0cee89e4b3381837c11243
 DIST xmds_doc_20080226.pdf 8093270 RMD160 05f01541ea46a1f0fd0c45078270a2b5009c8bf4 SHA1 215889d8302b21eddb3fbe18550adb414d609e42 SHA256 93ca478d70cfc684cabb24e278181a50f70f4a2b769e8cf7028b6ecc1cb10009
 EBUILD xmds-1.6.4.ebuild 1065 RMD160 91931c9452dda552b6bc0b948b7915f6d9014714 SHA1 05e846a279bd3f2e9ec4cbb2e84e8e6ce34d481e SHA256 69d035ca5ff200061f620250eab53fbd3b7db912b36a30de4306d2c211053455
-EBUILD xmds-1.6.5.ebuild 1062 RMD160 b96d1ca4cceb59336eefc2fb361bb428d7390002 SHA1 8fd60ebe165c0bc73ccf73ae0c4728c353961066 SHA256 5f3be33d109f3d7edf1a04d3bffc41d0e2c2f78f718e1e5a4bf2ae026570302b
-MISC ChangeLog 467 RMD160 b92d93d8572838697a933fa07cd55942402fe9c5 SHA1 a4c32f86d34b9af45f18b0be17fefdec6bd3d342 SHA256 da2539126f6893c596d445814aa6968eb0d42c3360207fa694907c7c0f85d23a
+EBUILD xmds-1.6.5.ebuild 1237 RMD160 390b22348fbfbf2b1cfa18c6e590ece51e52b0b9 SHA1 fb48b7eff65c8784adc030c16d3fbf156ecd56ba SHA256 e123d87066d7b17e409550fc572b43044f7f825c6db85c4b7c5a78a31fa90628
+MISC ChangeLog 582 RMD160 2c635f01514029b1371b02d6bc233ab673a5253f SHA1 0cca20e360af579ad073db426a846f4c710f8228 SHA256 3fd2472774fb39ebb1be7368df09f98ca2e92de25d1ceb9fbe51258e3012cbbd
 MISC metadata.xml 591 RMD160 970b4c9947cf13248f9ced0e498d04ff12202b01 SHA1 b8ca34cd7e5d1304a87ba04256c4e4acab2399ae SHA256 1cdbc7bb2bd9978b8a50add9f7c4917fdecd9df5d41d64ba10425730d4b03c2c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFH2+ndchej4aZK9/cRAqqZAJ4r7HZ2f1+qGLEukUtpgI9Xvl04hQCffERB
-oCuKNnyMuhXxV9+MWnsS7Yw=
-=Zp5c
+iD8DBQFH2+9gchej4aZK9/cRArYSAJ9uE7k9hhHvbCrmL+uqgDDftVoX8gCghGeE
+5+RDlYtz9w0F9ZA9bDwJwzA=
+=2OV/
 -----END PGP SIGNATURE-----
