@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/xmds
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/xmds/ChangeLog,v 1.2 2008/03/15 15:23:01 spock Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/xmds/ChangeLog,v 1.3 2008/03/15 15:46:33 spock Exp $
+
+  15 Mar 2008; Michał Januszewski <spock@gentoo.org> xmds-1.6.5.ebuild:
+  Fix installation of docs and examples.
 
 *xmds-1.6.5 (15 Mar 2008)
 
